Application/vaultwarden-gateway/1016-gateway-vaultwarden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vaultwarden-gw
  namespace: default
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: gateway
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      hostname: svault.icanvoca.com
      port: 8088
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      hostname: svault.icanvoca.com
      port: 4438
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vaultwarden-tls-secret
      allowedRoutes:
        namespaces:
          from: Same
