Application/vaultwarden-gateway/3201-httproute-https-vaultwarden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-https
  namespace: default
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: httproute
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: vaultwarden-gw
      sectionName: websecure
  hostnames:
    - svault.icanvoca.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
